fix: 修复AI自动学习Skill不生效的问题
- SkillService.learnFromSuccessfulFlow 改为异步执行(CompletableFuture.runAsync)，避免在主事务中影响任务保存
- 添加 @Transactional(propagation = REQUIRES_NEW) 确保学习操作在独立事务中执行
- buildFlowDTO 补充边(edges)数据查询和映射，之前edges为空列表
- 注入 FlowEdgeRepository 查询流程边数据
- 添加空节点时的日志警告